--- a/class.access.html
+++ b/class.access.html
@@ -75,8 +75,8 @@ entity, including parts of the declaration preceding the name of the entity
 being declared and, if the entity is a class, the definitions of members of
 the class appearing outside the class's <i ><a href='class.mem#nt:member-specification'>member-specification.</a></i>
 [&nbsp;<i>Note:</i> This access also applies to implicit references to constructors,
-conversion functions, and destructors. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+conversion functions, and destructors. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class A {
   typedef int I;    <span class='comment'>// private member
 </span>  I f();
@@ -96,7 +96,7 @@ template&lt;A::I&gt; struct A::Q { };
 template&lt;A::I&gt; struct R { };
 
 struct D: A::B, A { };
-</pre></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >Here, all the uses of
+</pre><p >Here, all the uses of
 <span class='texttt'>A::I</span>
 are well-formed because
 <span class='texttt'>A::f</span>,
@@ -722,7 +722,7 @@ class B : public virtual W { };
 class C : public A, public B {
   void f() { W::f(); }          <span class='comment'>// OK
 </span>};
-</pre></div><div class='para' id='class.paths-2'><div class='marginalizedparent'><a class='marginalized' href='#class.paths-2'>2</a></div><p >Since
+</pre><p >Since
 <span class='texttt'>W::f()</span>
 is available to
 <span class='texttt'>C::f()</span>
