--- a/class.path.html
+++ b/class.path.html
@@ -811,11 +811,11 @@ A string is to be read from a database that is encoded in UTF-8, and used
 namespace fs = std::filesystem;
 std::string utf8_string = read_utf8_data();
 fs::create_directory(fs::u8path(utf8_string));
-</pre></div></div><div class='para' id='path.factory-5'><div class='marginalizedparent'><a class='marginalized' href='#path.factory-5'>5</a></div><div class='itemdescr'><p >For POSIX-based operating systems with the native narrow encoding set
-    to UTF-8, no encoding or type conversion occurs.</p></div></div><div class='para' id='path.factory-6'><div class='marginalizedparent'><a class='marginalized' href='#path.factory-6'>6</a></div><div class='itemdescr'><p >For POSIX-based operating systems with the native narrow encoding not
+</pre><p >For POSIX-based operating systems with the native narrow encoding set
+    to UTF-8, no encoding or type conversion occurs.</p><p >For POSIX-based operating systems with the native narrow encoding not
     set to UTF-8, a conversion to UTF-32 occurs, followed by a conversion to the
     current native narrow encoding. Some Unicode characters may have no native character
-    set representation.</p></div></div><div class='para' id='path.factory-7'><div class='marginalizedparent'><a class='marginalized' href='#path.factory-7'>7</a></div><div class='itemdescr'><p >For Windows-based operating systems a conversion from UTF-8 to
+    set representation.</p><p >For Windows-based operating systems a conversion from UTF-8 to
     UTF-16 occurs.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 </p></div></div></div></div></div></div></body></html>
