--- a/class.paths.html
+++ b/class.paths.html
@@ -7,7 +7,7 @@ class B : public virtual W { };
 class C : public A, public B {
   void f() { W::f(); }          <span class='comment'>// OK
 </span>};
-</pre></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Since
+</pre><p >Since
 <span class='texttt'>W::f()</span>
 is available to
 <span class='texttt'>C::f()</span>
