--- a/dcl.attr.html
+++ b/dcl.attr.html
@@ -206,11 +206,11 @@ void h(int i) {
   do_something_with(g(&amp;c, p-&gt;a));
   do_something_with(g(p-&gt;a, &amp;c));
 }
-</pre></div><div class='para' id='depend-5'><div class='marginalizedparent'><a class='marginalized' href='#depend-5'>5</a></div><p >The <span class='texttt'>carries_dependency</span> attribute on function <span class='texttt'>f</span> means that the
+</pre><p >The <span class='texttt'>carries_dependency</span> attribute on function <span class='texttt'>f</span> means that the
 return value carries a dependency out of <span class='texttt'>f</span>, so that the implementation
 need not constrain ordering upon return from <span class='texttt'>f</span>. Implementations of
 <span class='texttt'>f</span> and its caller may choose to preserve dependencies instead of emitting
-hardware memory ordering instructions (a.k.a. fences).</p></div><div class='para' id='depend-6'><div class='marginalizedparent'><a class='marginalized' href='#depend-6'>6</a></div><p >Function <span class='texttt'>g</span>'s second parameter has a <span class='texttt'>carries_dependency</span> attribute,
+hardware memory ordering instructions (a.k.a. fences).</p><p >Function <span class='texttt'>g</span>'s second parameter has a <span class='texttt'>carries_dependency</span> attribute,
 but its first parameter does not. Therefore, function <span class='texttt'>h</span>'s first call to
 <span class='texttt'>g</span> carries a dependency into <span class='texttt'>g</span>, but its second call does not. The
 implementation might need to insert a fence prior to the second call to
