--- a/dcl.meaning.html
+++ b/dcl.meaning.html
@@ -561,7 +561,7 @@ is interpreted
 in such a way that
 <span class='texttt'>E1[E2]</span>
 is identical to
-<span class='texttt'>*((E1)+(E2))</span>.
+<span class='texttt'>*((E1)+(E2))</span> (<a href='expr.sub'>[expr.sub]</a>).
 Because of the conversion rules
 that apply to
 <span class='texttt'>+</span>,
@@ -578,7 +578,9 @@ member of
 <span class='texttt'>E1</span>.
 Therefore,
 despite its asymmetric
-appearance, subscripting is a commutative operation.</p></div><div class='para' id='dcl.array-7'><div class='marginalizedparent'><a class='marginalized' href='#dcl.array-7'>7</a></div><p >A consistent rule is followed for
+appearance, subscripting is a commutative operation.
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='dcl.array-7'><div class='marginalizedparent'><a class='marginalized' href='#dcl.array-7'>7</a></div><p >[&nbsp;<i>Note:</i>
+A consistent rule is followed for
 <span class='indexparent'><a class='index' id='array,multidimensional'></a></span>multidimensional arrays.
 If
 <span class='texttt'>E</span>
@@ -601,7 +603,8 @@ operator, either explicitly
 or implicitly as a result of subscripting,
 is applied to this pointer,
 the result is the pointed-to <span class='math'>(<span class='mathalpha'>n</span>-1)</span>-dimensional array,
-which itself is immediately converted into a pointer.</p></div><div class='para' id='dcl.array-8'><div class='marginalizedparent'><a class='marginalized' href='#dcl.array-8'>8</a></div><p >[&nbsp;<i>Example:</i>
+which itself is immediately converted into a pointer.
+[&nbsp;<i>Example:</i>
 consider</p><pre class='codeblock'>
 int x[3][5];
 </pre><p >Here
@@ -632,7 +635,7 @@ a pointer to the first of the integers.
 If there is another subscript the same argument applies
 again; this time the result is an integer.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='dcl.array-9'><div class='marginalizedparent'><a class='marginalized' href='#dcl.array-9'>9</a></div><p >[&nbsp;<i>Note:</i>
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='dcl.array-8'><div class='marginalizedparent'><a class='marginalized' href='#dcl.array-8'>8</a></div><p >[&nbsp;<i>Note:</i>
 It follows from all this that arrays in C++ are stored
 row-wise (last subscript varies fastest)
 <span class='indexparent'><a class='index' id='array,storage_of'></a></span>and that the first subscript in the declaration helps determine
