--- a/fs.op.copy.html
+++ b/fs.op.copy.html
@@ -65,7 +65,7 @@ library functions called by the implementation shall have an <span class='texttt
   file2
   dir2
     file3
-</pre></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p >Calling <span class='texttt'>copy("/dir1", "/dir3")</span> would result in:
+</pre><p >Calling <span class='texttt'>copy("/dir1", "/dir3")</span> would result in:
 </p><pre class='codeblock'>
 /dir1
   file1
@@ -75,7 +75,7 @@ library functions called by the implementation shall have an <span class='texttt
 /dir3
   file1
   file2
-</pre></div></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><div class='itemdescr'><p >Alternatively, calling <span class='texttt'>copy("/dir1", "/dir3", copy_options::recursive)</span> would result in:
+</pre><p >Alternatively, calling <span class='texttt'>copy("/dir1", "/dir3", copy_options::recursive)</span> would result in:
 </p><pre class='codeblock'>
 /dir1
   file1
