--- a/fs.op.temp_dir_path.html
+++ b/fs.op.temp_dir_path.html
@@ -7,7 +7,7 @@ path temp_directory_path(error_code&amp; ec);
   error occurs.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Throws:</i> As specified in <a href='fs.err.report'>[fs.err.report]</a>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p >[&nbsp;<i>Example:</i> For POSIX-based operating systems, an implementation might
   return the path
   supplied by the first environment variable found in the list TMPDIR, TMP, TEMP, TEMPDIR,
-  or if none of these are found, <span class='texttt'>"/tmp"</span>.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p >For Windows-based operating systems, an implementation might return the path
+  or if none of these are found, <span class='texttt'>"/tmp"</span>.</p><p >For Windows-based operating systems, an implementation might return the path
   reported by the Windows <span class='texttt'>GetTempPath</span> API function.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 </p></div></div></div></div></body></html>
