--- a/istream.iterator.cons.html
+++ b/istream.iterator.cons.html
@@ -7,8 +7,8 @@ then this constructor is a constexpr constructor.</p></div></div><div class='par
 </p></div></div><p ><span class='indexparent'><a class='index' id='istream_iterator,constructor'></a></span><code class='itemdecl'>
 istream_iterator(istream_type&amp; s);
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Initializes <i>in_stream</i> with <span class='texttt'>addressof(s)</span>.
-<i>value</i> may be initialized during
+Initializes <span class='texttt'>in_stream</span> with <span class='texttt'>addressof(s)</span>.
+<span class='texttt'>value</span> may be initialized during
 construction or the first time it is referenced.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>in_stream == addressof(s)</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='istream_iterator,constructor'></a></span><code class='itemdecl'>
 istream_iterator(const istream_iterator&amp; x) = default;
