--- a/namespace.qual.html
+++ b/namespace.qual.html
@@ -69,8 +69,11 @@ void h(){
 </span>                    <span class='comment'>// are applied recursively to <span class='texttt'>Y</span> and <span class='texttt'>Z</span>, <span class='texttt'>S</span> is <span class='math'>{ <span class='text'><span class='texttt'>Y::h(int)</span></span>, <span class='text'><span class='texttt'>Z::h(double)</span></span> }</span> and
 </span>                    <span class='comment'>// overload resolution chooses <span class='texttt'>Z::h(double)</span>
 </span>}
-</pre></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >The same declaration found more than once is not an ambiguity (because
-it is still a unique declaration). For example:</p><pre class='codeblock'>
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >[&nbsp;<i>Note:</i>
+The same declaration found more than once is not an ambiguity (because
+it is still a unique declaration).
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 namespace A {
   int a;
 }
@@ -104,7 +107,9 @@ namespace BD {
 void g(){
   BD::a++;          <span class='comment'>// OK: <span class='texttt'>S</span> is <span class='math'>{ <span class='text'><span class='texttt'>A::a</span></span>, <span class='text'><span class='texttt'>A::a</span></span> }</span>
 </span>}
-</pre></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >Because each referenced namespace is searched at most once, the
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >[&nbsp;<i>Example:</i>
+Because each referenced namespace is searched at most once, the
 following is well-defined:</p><pre class='codeblock'>
 namespace B {
   int b;
