--- a/temp.deduct.type.html
+++ b/temp.deduct.type.html
@@ -367,7 +367,8 @@ void g() {
 </span>  f2&lt;10&gt;(v);        <span class='comment'>// OK
 </span>  f3(v);            <span class='comment'>// OK: <span class='texttt'>i</span> deduced to be <span class='texttt'>10</span>
 </span>}
-</pre></div><div class='para' id='16'><div class='marginalizedparent'><a class='marginalized' href='#16'>16</a></div><p >If, in the declaration of a function template with a non-type
+</pre><p ><i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='16'><div class='marginalizedparent'><a class='marginalized' href='#16'>16</a></div><p >[&nbsp;<i>Note:</i>
+If, in the declaration of a function template with a non-type
 template parameter, the non-type template parameter
 is used in a subexpression in the function parameter list,
 the expression is a non-deduced context as specified above.
@@ -384,8 +385,7 @@ void k() {
 </span>  f(a1, a2);        <span class='comment'>// OK
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]
-[&nbsp;<i>Note:</i>
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='17'><div class='marginalizedparent'><a class='marginalized' href='#17'>17</a></div><p >[&nbsp;<i>Note:</i>
 Template parameters do not participate in template argument deduction if
 they are used only in non-deduced contexts.
 For example,</p><pre class='codeblock'>
@@ -401,7 +401,7 @@ int    x = deduce&lt;77&gt;(a.xm, 62, b.ym);
 </span><span class='comment'>// <span class='texttt'>A&lt;int&gt;::X</span>
 </span><span class='comment'>// <span class='texttt'>i</span> is explicitly specified to be <span class='texttt'>77</span>, <span class='texttt'>b.ym</span> must be convertible
 </span><span class='comment'>// to <span class='texttt'>B&lt;77&gt;::Y</span>
-</span></pre><p ><i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='17'><div class='marginalizedparent'><a class='marginalized' href='#17'>17</a></div><p >If <span class='texttt'>P</span> has a form that contains <span class='texttt'>&lt;i&gt;</span>, and
+</span></pre><p ><i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='18'><div class='marginalizedparent'><a class='marginalized' href='#18'>18</a></div><p >If <span class='texttt'>P</span> has a form that contains <span class='texttt'>&lt;i&gt;</span>, and
 if the type of <span class='texttt'>i</span> differs from the type
 of the corresponding template parameter
 of the template named by the enclosing <i ><a href='temp.names#nt:simple-template-id'>simple-template-id</a></i>,
@@ -423,7 +423,7 @@ void k2() {
   B&lt;1&gt; b;
   g(b);             <span class='comment'>// OK: cv-qualifiers are ignored on template parameter types
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='18'><div class='marginalizedparent'><a class='marginalized' href='#18'>18</a></div><p >A
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='19'><div class='marginalizedparent'><a class='marginalized' href='#19'>19</a></div><p >A
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 can be deduced from a function, pointer to function, or pointer to
 member function type.</p><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
@@ -439,7 +439,7 @@ int m() {
 </span>  f(&amp;h);            <span class='comment'>// OK: void <span class='texttt'>h(char,int)</span> is a unique match
 </span>  f(&amp;foo);          <span class='comment'>// error: type deduction fails because <span class='texttt'>foo</span> is a template
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='19'><div class='marginalizedparent'><a class='marginalized' href='#19'>19</a></div><p >A template
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='20'><div class='marginalizedparent'><a class='marginalized' href='#20'>20</a></div><p >A template
 <i ><a href='temp.param#nt:type-parameter'>type-parameter</a></i>
 cannot be deduced from the type of a function default argument.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
@@ -449,7 +449,7 @@ void g() {
 </span>  f();              <span class='comment'>// error: cannot deduce <span class='texttt'>T</span>
 </span>  f&lt;int&gt;();         <span class='comment'>// OK: call <span class='texttt'>f&lt;int&gt;(5,7)</span>
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='20'><div class='marginalizedparent'><a class='marginalized' href='#20'>20</a></div><p >The
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='21'><div class='marginalizedparent'><a class='marginalized' href='#21'>21</a></div><p >The
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 corresponding to a template
 <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
@@ -462,7 +462,7 @@ template &lt;template &lt;class T&gt; class X&gt; void f(A&lt;X&gt;) { }
 template&lt;class T&gt; struct B { };
 A&lt;B&gt; ab;
 f(ab);              <span class='comment'>// calls <span class='texttt'>f(A&lt;B&gt;)</span>
-</span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='21'><div class='marginalizedparent'><a class='marginalized' href='#21'>21</a></div><p >[&nbsp;<i>Note:</i> Template argument deduction involving parameter
+</span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='22'><div class='marginalizedparent'><a class='marginalized' href='#22'>22</a></div><p >[&nbsp;<i>Note:</i> Template argument deduction involving parameter
 packs (<a href='temp.variadic'>[temp.variadic]</a>) can deduce zero or more arguments for
 each parameter pack. <i>&nbsp;—&nbsp;end note</i>&nbsp;][&nbsp;<i>Example:</i></p><pre class='codeblock'>
 template&lt;class&gt; struct X { };
