--- a/temp.html
+++ b/temp.html
@@ -5212,7 +5212,8 @@ void g() {
 </span>  f2&lt;10&gt;(v);        <span class='comment'>// OK
 </span>  f3(v);            <span class='comment'>// OK: <span class='texttt'>i</span> deduced to be <span class='texttt'>10</span>
 </span>}
-</pre></div><div class='para' id='deduct.type-16'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-16'>16</a></div><p >If, in the declaration of a function template with a non-type
+</pre><p ><i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='deduct.type-16'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-16'>16</a></div><p >[&nbsp;<i>Note:</i>
+If, in the declaration of a function template with a non-type
 template parameter, the non-type template parameter
 is used in a subexpression in the function parameter list,
 the expression is a non-deduced context as specified above.
@@ -5229,8 +5230,7 @@ void k() {
 </span>  f(a1, a2);        <span class='comment'>// OK
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]
-[&nbsp;<i>Note:</i>
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='deduct.type-17'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-17'>17</a></div><p >[&nbsp;<i>Note:</i>
 Template parameters do not participate in template argument deduction if
 they are used only in non-deduced contexts.
 For example,</p><pre class='codeblock'>
@@ -5246,7 +5246,7 @@ int    x = deduce&lt;77&gt;(a.xm, 62, b.ym);
 </span><span class='comment'>// <span class='texttt'>A&lt;int&gt;::X</span>
 </span><span class='comment'>// <span class='texttt'>i</span> is explicitly specified to be <span class='texttt'>77</span>, <span class='texttt'>b.ym</span> must be convertible
 </span><span class='comment'>// to <span class='texttt'>B&lt;77&gt;::Y</span>
-</span></pre><p ><i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='deduct.type-17'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-17'>17</a></div><p >If <span class='texttt'>P</span> has a form that contains <span class='texttt'>&lt;i&gt;</span>, and
+</span></pre><p ><i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='deduct.type-18'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-18'>18</a></div><p >If <span class='texttt'>P</span> has a form that contains <span class='texttt'>&lt;i&gt;</span>, and
 if the type of <span class='texttt'>i</span> differs from the type
 of the corresponding template parameter
 of the template named by the enclosing <i ><a href='temp.names#nt:simple-template-id'>simple-template-id</a></i>,
@@ -5268,7 +5268,7 @@ void k2() {
   B&lt;1&gt; b;
   g(b);             <span class='comment'>// OK: cv-qualifiers are ignored on template parameter types
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='deduct.type-18'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-18'>18</a></div><p >A
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='deduct.type-19'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-19'>19</a></div><p >A
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 can be deduced from a function, pointer to function, or pointer to
 member function type.</p><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
@@ -5284,7 +5284,7 @@ int m() {
 </span>  f(&amp;h);            <span class='comment'>// OK: void <span class='texttt'>h(char,int)</span> is a unique match
 </span>  f(&amp;foo);          <span class='comment'>// error: type deduction fails because <span class='texttt'>foo</span> is a template
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='deduct.type-19'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-19'>19</a></div><p >A template
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='deduct.type-20'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-20'>20</a></div><p >A template
 <i ><a href='temp.param#nt:type-parameter'>type-parameter</a></i>
 cannot be deduced from the type of a function default argument.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
@@ -5294,7 +5294,7 @@ void g() {
 </span>  f();              <span class='comment'>// error: cannot deduce <span class='texttt'>T</span>
 </span>  f&lt;int&gt;();         <span class='comment'>// OK: call <span class='texttt'>f&lt;int&gt;(5,7)</span>
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='deduct.type-20'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-20'>20</a></div><p >The
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='deduct.type-21'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-21'>21</a></div><p >The
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 corresponding to a template
 <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
@@ -5307,7 +5307,7 @@ template &lt;template &lt;class T&gt; class X&gt; void f(A&lt;X&gt;) { }
 template&lt;class T&gt; struct B { };
 A&lt;B&gt; ab;
 f(ab);              <span class='comment'>// calls <span class='texttt'>f(A&lt;B&gt;)</span>
-</span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='deduct.type-21'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-21'>21</a></div><p >[&nbsp;<i>Note:</i> Template argument deduction involving parameter
+</span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='deduct.type-22'><div class='marginalizedparent'><a class='marginalized' href='#deduct.type-22'>22</a></div><p >[&nbsp;<i>Note:</i> Template argument deduction involving parameter
 packs (<a href='temp.variadic'>[temp.variadic]</a>) can deduce zero or more arguments for
 each parameter pack. <i>&nbsp;—&nbsp;end note</i>&nbsp;][&nbsp;<i>Example:</i></p><pre class='codeblock'>
 template&lt;class&gt; struct X { };
@@ -5372,7 +5372,7 @@ the same name.
 The synthesized declarations are
 treated like any other functions in
 the remainder of overload resolution, except as explicitly noted
-in <a href='over.match.best'>[over.match.best]</a>.<a class='footnotenum' href='#footnote-143'>143</a></p><p >[&nbsp;<i>Example:</i>
+in <a href='over.match.best'>[over.match.best]</a>.<a class='footnotenum' href='#footnote-143'>143</a></p></div><div class='para' id='over-2'><div class='marginalizedparent'><a class='marginalized' href='#over-2'>2</a></div><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 template&lt;class T&gt; T max(T a, T b) { return a&gt;b?a:b; }
 
@@ -5381,7 +5381,7 @@ void f(int a, int b, char c, char d) {
 </span>  char m2 = max(c,d);           <span class='comment'>// <span class='texttt'>max(char a, char b)</span>
 </span>  int m3 = max(a,c);            <span class='comment'>// error: cannot generate <span class='texttt'>max(int,char)</span>
 </span>}
-</pre></div><div class='para' id='over-2'><div class='marginalizedparent'><a class='marginalized' href='#over-2'>2</a></div><p >Adding the non-template function</p><pre class='codeblock'>
+</pre><p >Adding the non-template function</p><pre class='codeblock'>
 int max(int,int);
 </pre><p >to the example above would resolve the third call, by providing a function that
 could be called for
@@ -5391,7 +5391,9 @@ after using the standard conversion of
 to
 <span class='texttt'>int</span>
 for
-<span class='texttt'>c</span>.</p></div><div class='para' id='over-3'><div class='marginalizedparent'><a class='marginalized' href='#over-3'>3</a></div><p >Here is an example involving conversions on a function argument involved in
+<span class='texttt'>c</span>.
+<i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='over-3'><div class='marginalizedparent'><a class='marginalized' href='#over-3'>3</a></div><p >[&nbsp;<i>Example:</i>
+Here is an example involving conversions on a function argument involved in
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 deduction:</p><pre class='codeblock'>
 template&lt;class T&gt; struct B { <span class='texttt'>/* ... */</span> };
@@ -5402,7 +5404,8 @@ void g(B&lt;int&gt;&amp; bi, D&lt;int&gt;&amp; di) {
   f(bi);            <span class='comment'>// <span class='texttt'>f(bi)</span>
 </span>  f(di);            <span class='comment'>// <span class='texttt'>f((B&lt;int&gt;&amp;)di)</span>
 </span>}
-</pre></div><div class='para' id='over-4'><div class='marginalizedparent'><a class='marginalized' href='#over-4'>4</a></div><p >Here is an example involving conversions on a function argument not involved in
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='over-4'><div class='marginalizedparent'><a class='marginalized' href='#over-4'>4</a></div><p >[&nbsp;<i>Example:</i>
+Here is an example involving conversions on a function argument not involved in
 <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
 deduction:</p><pre class='codeblock'>
 template&lt;class T&gt; void f(T*,int);       <span class='comment'>// #1
@@ -5425,7 +5428,7 @@ template&lt;class T&gt; void f(T);    <span class='comment'>// declaration
 void g() {
   f("Annemarie");               <span class='comment'>// call of <span class='texttt'>f&lt;const char*&gt;</span>
 </span>}
-</pre></div><div class='para' id='over-6'><div class='marginalizedparent'><a class='marginalized' href='#over-6'>6</a></div><p >The call of
+</pre><p >The call of
 <span class='texttt'>f</span>
 is well-formed even if the template
 <span class='texttt'>f</span>
