--- a/temp.over.html
+++ b/temp.over.html
@@ -22,7 +22,7 @@ the same name.
 The synthesized declarations are
 treated like any other functions in
 the remainder of overload resolution, except as explicitly noted
-in <a href='over.match.best'>[over.match.best]</a>.<a class='footnotenum' href='#footnote-143'>143</a></p><p >[&nbsp;<i>Example:</i>
+in <a href='over.match.best'>[over.match.best]</a>.<a class='footnotenum' href='#footnote-143'>143</a></p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 template&lt;class T&gt; T max(T a, T b) { return a&gt;b?a:b; }
 
@@ -31,7 +31,7 @@ void f(int a, int b, char c, char d) {
 </span>  char m2 = max(c,d);           <span class='comment'>// <span class='texttt'>max(char a, char b)</span>
 </span>  int m3 = max(a,c);            <span class='comment'>// error: cannot generate <span class='texttt'>max(int,char)</span>
 </span>}
-</pre></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Adding the non-template function</p><pre class='codeblock'>
+</pre><p >Adding the non-template function</p><pre class='codeblock'>
 int max(int,int);
 </pre><p >to the example above would resolve the third call, by providing a function that
 could be called for
@@ -41,7 +41,9 @@ after using the standard conversion of
 to
 <span class='texttt'>int</span>
 for
-<span class='texttt'>c</span>.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Here is an example involving conversions on a function argument involved in
+<span class='texttt'>c</span>.
+<i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >[&nbsp;<i>Example:</i>
+Here is an example involving conversions on a function argument involved in
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 deduction:</p><pre class='codeblock'>
 template&lt;class T&gt; struct B { <span class='texttt'>/* ... */</span> };
@@ -52,7 +54,8 @@ void g(B&lt;int&gt;&amp; bi, D&lt;int&gt;&amp; di) {
   f(bi);            <span class='comment'>// <span class='texttt'>f(bi)</span>
 </span>  f(di);            <span class='comment'>// <span class='texttt'>f((B&lt;int&gt;&amp;)di)</span>
 </span>}
-</pre></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >Here is an example involving conversions on a function argument not involved in
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >[&nbsp;<i>Example:</i>
+Here is an example involving conversions on a function argument not involved in
 <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
 deduction:</p><pre class='codeblock'>
 template&lt;class T&gt; void f(T*,int);       <span class='comment'>// #1
@@ -75,7 +78,7 @@ template&lt;class T&gt; void f(T);    <span class='comment'>// declaration
 void g() {
   f("Annemarie");               <span class='comment'>// call of <span class='texttt'>f&lt;const char*&gt;</span>
 </span>}
-</pre></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >The call of
+</pre><p >The call of
 <span class='texttt'>f</span>
 is well-formed even if the template
 <span class='texttt'>f</span>
