--- a/class.mi.html
+++ b/class.mi.html
@@ -43,9 +43,8 @@ non-virtual base class in the class lattice of the most derived class,
 the most derived object (<a href='intro.object'>[intro.object]</a>) shall contain a
 corresponding distinct base class subobject of that type. For each
 distinct base class that is specified virtual, the most derived object
-shall contain a single base class subobject of that type.
-[&nbsp;<i>Example:</i>
-for an object of class type <span class='texttt'>C</span>, each distinct occurrence of a
+shall contain a single base class subobject of that type.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >[&nbsp;<i>Note:</i>
+For an object of class type <span class='texttt'>C</span>, each distinct occurrence of a
 (non-virtual) base class <span class='texttt'>L</span> in the class lattice of <span class='texttt'>C</span>
 corresponds one-to-one with a distinct <span class='texttt'>L</span> subobject within the
 object of type <span class='texttt'>C</span>. Given the class <span class='texttt'>C</span> defined above, an
@@ -96,24 +95,22 @@ shown in Figure <a href='#fig:nonvirt'>[fig:nonvirt]</a>.</p><div class='figure'
 </g>
 </g>
 </svg>
-<br>Figure <a href='#fig:nonvirt'>3</a> — Non-virtual base</div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >In such lattices, explicit qualification can be used to specify which
+<br>Figure <a href='#fig:nonvirt'>3</a> — Non-virtual base</div><p >In such lattices, explicit qualification can be used to specify which
 subobject is meant. The body of function <span class='texttt'>C::f</span> could refer to the
 member <span class='texttt'>next</span> of each <span class='texttt'>L</span> subobject:
 </p><pre class='codeblock'>
 void C::f() { A::next = B::next; }      <span class='comment'>// well-formed
 </span></pre><p >Without the <span class='texttt'>A::</span> or <span class='texttt'>B::</span> qualifiers, the definition of
 <span class='texttt'>C::f</span> above would be ill-formed because of
-ambiguity (<a href='class.member.lookup'>[class.member.lookup]</a>).</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >For another example,
+ambiguity (<a href='class.member.lookup'>[class.member.lookup]</a>).
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >[&nbsp;<i>Note:</i>
+In contrast, consider the case with a virtual base class:
 </p><pre class='codeblock'>
 class V { <span class='texttt'>/* ... */</span> };
 class A : virtual public V { <span class='texttt'>/* ... */</span> };
 class B : virtual public V { <span class='texttt'>/* ... */</span> };
 class C : public A, public B { <span class='texttt'>/* ... */</span> };
-</pre><p >for an object <span class='texttt'>c</span> of class type <span class='texttt'>C</span>, a single subobject of
-type <span class='texttt'>V</span> is shared by every base subobject of <span class='texttt'>c</span> that has a
-<span class='texttt'>virtual</span> base class of type <span class='texttt'>V</span>. Given the class <span class='texttt'>C</span>
-defined above, an object of class <span class='texttt'>C</span> will have one subobject of
-class <span class='texttt'>V</span>, as shown in Figure <a href='#fig:virt'>[fig:virt]</a>.</p><p ><span class='indexparent'><a class='index' id='DAG,multiple_inheritance'></a></span><span class='indexparent'><a class='index' id='DAG,virtual_base_class'></a></span></p><div class='figure' id='fig:virt'><svg width="224pt" height="182pt"
+</pre><div class='figure' id='fig:virt'><svg width="224pt" height="182pt"
  viewBox="0.00 0.00 224.00 182.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <g class="graph" transform="scale(1 1) rotate(0) translate(4 178)">
 <title>virt</title>
@@ -155,7 +152,13 @@ class <span class='texttt'>V</span>, as shown in Figure <a href='#fig:virt'>[fig
 </g>
 </g>
 </svg>
-<br>Figure <a href='#fig:virt'>4</a> — Virtual base</div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >A class can have both virtual and non-virtual base classes of a given
+<br>Figure <a href='#fig:virt'>4</a> — Virtual base</div><p >For an object <span class='texttt'>c</span> of class type <span class='texttt'>C</span>, a single subobject of
+type <span class='texttt'>V</span> is shared by every base subobject of <span class='texttt'>c</span> that has a
+<span class='texttt'>virtual</span> base class of type <span class='texttt'>V</span>. Given the class <span class='texttt'>C</span>
+defined above, an object of class <span class='texttt'>C</span> will have one subobject of
+class <span class='texttt'>V</span>, as shown in Figure <a href='#fig:virt'>[fig:virt]</a>.
+<span class='indexparent'><a class='index' id='DAG,multiple_inheritance'></a></span><span class='indexparent'><a class='index' id='DAG,virtual_base_class'></a></span><i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >[&nbsp;<i>Note:</i>
+A class can have both virtual and non-virtual base classes of a given
 type.
 </p><pre class='codeblock'>
 class B { <span class='texttt'>/* ... */</span> };
@@ -231,4 +234,4 @@ by <span class='texttt'>X</span> and <span class='texttt'>Y</span>, as shown in 
 </g>
 </g>
 </svg>
-<br>Figure <a href='#fig:virtnonvirt'>5</a> — Virtual and non-virtual base</div><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div></div></body></html>
+<br>Figure <a href='#fig:virtnonvirt'>5</a> — Virtual and non-virtual base</div><p ><i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div></body></html>
