--- a/filesystems.html
+++ b/filesystems.html
@@ -1187,11 +1187,11 @@ A string is to be read from a database that is encoded in UTF-8, and used
 namespace fs = std::filesystem;
 std::string utf8_string = read_utf8_data();
 fs::create_directory(fs::u8path(utf8_string));
-</pre></div></div><div class='para' id='path.factory-5'><div class='marginalizedparent'><a class='marginalized' href='#path.factory-5'>5</a></div><div class='itemdescr'><p >For POSIX-based operating systems with the native narrow encoding set
-    to UTF-8, no encoding or type conversion occurs.</p></div></div><div class='para' id='path.factory-6'><div class='marginalizedparent'><a class='marginalized' href='#path.factory-6'>6</a></div><div class='itemdescr'><p >For POSIX-based operating systems with the native narrow encoding not
+</pre><p >For POSIX-based operating systems with the native narrow encoding set
+    to UTF-8, no encoding or type conversion occurs.</p><p >For POSIX-based operating systems with the native narrow encoding not
     set to UTF-8, a conversion to UTF-32 occurs, followed by a conversion to the
     current native narrow encoding. Some Unicode characters may have no native character
-    set representation.</p></div></div><div class='para' id='path.factory-7'><div class='marginalizedparent'><a class='marginalized' href='#path.factory-7'>7</a></div><div class='itemdescr'><p >For Windows-based operating systems a conversion from UTF-8 to
+    set representation.</p><p >For Windows-based operating systems a conversion from UTF-8 to
     UTF-16 occurs.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 </p></div></div></div></div></div><div id='class.filesystem_error'><h3 ><a class='secnum' href='#class.filesystem_error' style='min-width:103pt'>27.10.9</a> Class <span class='texttt'>filesystem_error</span> <a class='abbr_ref' href='class.filesystem_error'>[class.filesystem_error]</a></h3><p ><span class='indexparent'><a class='index' id='filesystem_error'></a></span></p><pre class='codeblock'>
@@ -1831,7 +1831,7 @@ library functions called by the implementation shall have an <span class='texttt
   file2
   dir2
     file3
-</pre></div></div><div class='para' id='fs.op.copy-7'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.copy-7'>7</a></div><div class='itemdescr'><p >Calling <span class='texttt'>copy("/dir1", "/dir3")</span> would result in:
+</pre><p >Calling <span class='texttt'>copy("/dir1", "/dir3")</span> would result in:
 </p><pre class='codeblock'>
 /dir1
   file1
@@ -1841,7 +1841,7 @@ library functions called by the implementation shall have an <span class='texttt
 /dir3
   file1
   file2
-</pre></div></div><div class='para' id='fs.op.copy-8'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.copy-8'>8</a></div><div class='itemdescr'><p >Alternatively, calling <span class='texttt'>copy("/dir1", "/dir3", copy_options::recursive)</span> would result in:
+</pre><p >Alternatively, calling <span class='texttt'>copy("/dir1", "/dir3", copy_options::recursive)</span> would result in:
 </p><pre class='codeblock'>
 /dir1
   file1
@@ -2307,7 +2307,7 @@ path system_complete(const path&amp; p, error_code&amp; ec);
   same rules used by the operating system to resolve a path passed as the
   filename argument to standard library open functions.</p></div></div><div class='para' id='fs.op.system_complete-2'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.system_complete-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i> The composed path. The signature with argument <span class='texttt'>ec</span>
   returns <span class='texttt'>path()</span> if an error occurs.</p></div></div><div class='para' id='fs.op.system_complete-3'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.system_complete-3'>3</a></div><div class='itemdescr'><p ><i>Postconditions:</i> For the returned path, <span class='texttt'>rp</span>, <span class='texttt'>rp.is_absolute()</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='fs.op.system_complete-4'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.system_complete-4'>4</a></div><div class='itemdescr'><p ><i>Throws:</i> As specified in <a href='fs.err.report'>[fs.err.report]</a>.</p></div></div><div class='para' id='fs.op.system_complete-5'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.system_complete-5'>5</a></div><div class='itemdescr'><p >[&nbsp;<i>Example:</i> For POSIX-based operating systems, <span class='texttt'>system_complete(p)</span>
-  has the same semantics as <span class='texttt'>absolute(p, current_path())</span>.</p></div></div><div class='para' id='fs.op.system_complete-6'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.system_complete-6'>6</a></div><div class='itemdescr'><p >For Windows-based operating systems, <span class='texttt'>system_complete(p)</span> has the
+  has the same semantics as <span class='texttt'>absolute(p, current_path())</span>.</p><p >For Windows-based operating systems, <span class='texttt'>system_complete(p)</span> has the
   same semantics as <span class='texttt'>absolute(p, current_path())</span> if
   <span class='texttt'>p.is_absolute() || !p.has_root_name()</span> or
   <span class='texttt'>p</span> and <span class='texttt'>current_path()</span> have the same <span class='texttt'>root_name()</span>.
@@ -2325,7 +2325,7 @@ path temp_directory_path(error_code&amp; ec);
   error occurs.</p></div></div><div class='para' id='fs.op.temp_dir_path-2'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.temp_dir_path-2'>2</a></div><div class='itemdescr'><p ><i>Throws:</i> As specified in <a href='fs.err.report'>[fs.err.report]</a>.</p></div></div><div class='para' id='fs.op.temp_dir_path-3'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.temp_dir_path-3'>3</a></div><div class='itemdescr'><p >[&nbsp;<i>Example:</i> For POSIX-based operating systems, an implementation might
   return the path
   supplied by the first environment variable found in the list TMPDIR, TMP, TEMP, TEMPDIR,
-  or if none of these are found, <span class='texttt'>"/tmp"</span>.</p></div></div><div class='para' id='fs.op.temp_dir_path-4'><div class='marginalizedparent'><a class='marginalized' href='#fs.op.temp_dir_path-4'>4</a></div><div class='itemdescr'><p >For Windows-based operating systems, an implementation might return the path
+  or if none of these are found, <span class='texttt'>"/tmp"</span>.</p><p >For Windows-based operating systems, an implementation might return the path
   reported by the Windows <span class='texttt'>GetTempPath</span> API function.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 </p></div></div></div><div id='fs.op.weakly_canonical'><h4 ><a class='secnum' href='#fs.op.weakly_canonical' style='min-width:118pt'>27.10.15.40</a> Weakly canonical <a class='abbr_ref' href='fs.op.weakly_canonical'>[fs.op.weakly_canonical]</a></h4><p ><span class='indexparent'><a class='index' id='weakly_canonical'></a></span><code class='itemdecl'>
