--- a/istream.iterator.html
+++ b/istream.iterator.html
@@ -82,8 +82,8 @@ then this constructor is a constexpr constructor.</p></div></div><div class='par
 </p></div></div><p ><span class='indexparent'><a class='index' id='istream_iterator,constructor'></a></span><code class='itemdecl'>
 istream_iterator(istream_type&amp; s);
 </code></p><div class='itemdescr'></div><div class='para' id='cons-3'><div class='marginalizedparent'><a class='marginalized' href='#cons-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Initializes <i>in_stream</i> with <span class='texttt'>addressof(s)</span>.
-<i>value</i> may be initialized during
+Initializes <span class='texttt'>in_stream</span> with <span class='texttt'>addressof(s)</span>.
+<span class='texttt'>value</span> may be initialized during
 construction or the first time it is referenced.</p></div></div><div class='para' id='cons-4'><div class='marginalizedparent'><a class='marginalized' href='#cons-4'>4</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>in_stream == addressof(s)</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='istream_iterator,constructor'></a></span><code class='itemdecl'>
 istream_iterator(const istream_iterator&amp; x) = default;
@@ -100,7 +100,7 @@ then this destructor is a trivial destructor.
 </p></div></div></div><div id='ops'><h4 ><a class='secnum' href='#ops' style='min-width:118pt'>24.6.1.2</a> <span class='texttt'>istream_iterator</span> operations <a class='abbr_ref' href='istream.iterator.ops'>[istream.iterator.ops]</a></h4><p ><span class='indexparent'><a class='index' id='operator*,istream_iterator'></a></span><span class='indexparent'><a class='index' id='istream_iterator,operator*'></a></span><code class='itemdecl'>
 const T&amp; operator*() const;
 </code></p><div class='itemdescr'></div><div class='para' id='ops-1'><div class='marginalizedparent'><a class='marginalized' href='#ops-1'>1</a></div><div class='itemdescr'><p ><i>Returns:</i>
-<i>value</i>.
+<span class='texttt'>value</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator->,istream_iterator'></a></span><span class='indexparent'><a class='index' id='istream_iterator,operator->'></a></span><code class='itemdecl'>
 const T* operator-&gt;() const;
 </code></p><div class='itemdescr'></div><div class='para' id='ops-2'><div class='marginalizedparent'><a class='marginalized' href='#ops-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
