--- a/istream.iterator.ops.html
+++ b/istream.iterator.ops.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang='en'><head><title>[istream.iterator.ops]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>24</a> Iterators library <a class='abbr_ref' href='./#iterators'>[iterators]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>24.6</a> Stream iterators <a class='abbr_ref' href='stream.iterators#istream.iterator.ops'>[stream.iterators]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>24.6.1</a> Class template <span class='texttt'>istream_iterator</span> <a class='abbr_ref' href='istream.iterator#ops'>[istream.iterator]</a></h3><div id='istream.iterator.ops'><h4 ><a class='secnum' style='min-width:118pt'>24.6.1.2</a> <span class='texttt'>istream_iterator</span> operations <a class='abbr_ref'>[istream.iterator.ops]</a></h4><p ><span class='indexparent'><a class='index' id='operator*,istream_iterator'></a></span><span class='indexparent'><a class='index' id='istream_iterator,operator*'></a></span><code class='itemdecl'>
 const T&amp; operator*() const;
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Returns:</i>
-<i>value</i>.
+<span class='texttt'>value</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator->,istream_iterator'></a></span><span class='indexparent'><a class='index' id='istream_iterator,operator->'></a></span><code class='itemdecl'>
 const T* operator-&gt;() const;
 </code></p><div class='itemdescr'></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
