--- a/ostream.iterator.cons.des.html
+++ b/ostream.iterator.cons.des.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html lang='en'><head><title>[ostream.iterator.cons.des]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>24</a> Iterators library <a class='abbr_ref' href='./#iterators'>[iterators]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>24.6</a> Stream iterators <a class='abbr_ref' href='stream.iterators#ostream.iterator.cons.des'>[stream.iterators]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>24.6.2</a> Class template <span class='texttt'>ostream_iterator</span> <a class='abbr_ref' href='ostream.iterator#cons.des'>[ostream.iterator]</a></h3><div id='ostream.iterator.cons.des'><h4 ><a class='secnum' style='min-width:118pt'>24.6.2.1</a> <span class='texttt'>ostream_iterator</span> constructors and destructor <a class='abbr_ref'>[ostream.iterator.cons.des]</a></h4><p ><span class='indexparent'><a class='index' id='ostream_iterator,constructor'></a></span><code class='itemdecl'>
 ostream_iterator(ostream_type&amp; s);
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Initializes <i>out_stream</i> with <span class='texttt'>addressof(s)</span> and
-<i>delim</i> with null.
+Initializes <span class='texttt'>out_stream</span> with <span class='texttt'>addressof(s)</span> and
+<span class='texttt'>delim</span> with null.
 </p></div></div><p ><span class='indexparent'><a class='index' id='ostream_iterator,constructor'></a></span><code class='itemdecl'>
 ostream_iterator(ostream_type&amp; s, const charT* delimiter);
 </code></p><div class='itemdescr'></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Initializes <i>out_stream</i> with <span class='texttt'>addressof(s)</span> and
-<i>delim</i> with <span class='texttt'>delimiter</span>.
+Initializes <span class='texttt'>out_stream</span> with <span class='texttt'>addressof(s)</span> and
+<span class='texttt'>delim</span> with <span class='texttt'>delimiter</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='ostream_iterator,constructor'></a></span><code class='itemdecl'>
 ostream_iterator(const ostream_iterator&amp; x);
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
