--- a/ostream.iterator.html
+++ b/ostream.iterator.html
@@ -45,13 +45,13 @@ namespace std {
 </pre></div><div id='cons.des'><h4 ><a class='secnum' href='#cons.des' style='min-width:118pt'>24.6.2.1</a> <span class='texttt'>ostream_iterator</span> constructors and destructor <a class='abbr_ref' href='ostream.iterator.cons.des'>[ostream.iterator.cons.des]</a></h4><p ><span class='indexparent'><a class='index' id='ostream_iterator,constructor'></a></span><code class='itemdecl'>
 ostream_iterator(ostream_type&amp; s);
 </code></p><div class='itemdescr'></div><div class='para' id='cons.des-1'><div class='marginalizedparent'><a class='marginalized' href='#cons.des-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Initializes <i>out_stream</i> with <span class='texttt'>addressof(s)</span> and
-<i>delim</i> with null.
+Initializes <span class='texttt'>out_stream</span> with <span class='texttt'>addressof(s)</span> and
+<span class='texttt'>delim</span> with null.
 </p></div></div><p ><span class='indexparent'><a class='index' id='ostream_iterator,constructor'></a></span><code class='itemdecl'>
 ostream_iterator(ostream_type&amp; s, const charT* delimiter);
 </code></p><div class='itemdescr'></div><div class='para' id='cons.des-2'><div class='marginalizedparent'><a class='marginalized' href='#cons.des-2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Initializes <i>out_stream</i> with <span class='texttt'>addressof(s)</span> and
-<i>delim</i> with <span class='texttt'>delimiter</span>.
+Initializes <span class='texttt'>out_stream</span> with <span class='texttt'>addressof(s)</span> and
+<span class='texttt'>delim</span> with <span class='texttt'>delimiter</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='ostream_iterator,constructor'></a></span><code class='itemdecl'>
 ostream_iterator(const ostream_iterator&amp; x);
 </code></p><div class='itemdescr'></div><div class='para' id='cons.des-3'><div class='marginalizedparent'><a class='marginalized' href='#cons.des-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
@@ -65,9 +65,9 @@ ostream_iterator&amp; operator=(const T&amp; value);
 </code></p><div class='itemdescr'></div><div class='para' id='ops-1'><div class='marginalizedparent'><a class='marginalized' href='#ops-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 As if by:
 </p><pre class='codeblock'>
-*<i>out_stream</i> &lt;&lt; value;
-if (<i>delim</i> != 0)
-  *<i>out_stream</i> &lt;&lt; <i>delim</i>;
+*out_stream &lt;&lt; value;
+if (delim != 0)
+  *out_stream &lt;&lt; delim;
 return *this;
 </pre></div></div><p ><span class='indexparent'><a class='index' id='operator*,ostream_iterator'></a></span><span class='indexparent'><a class='index' id='ostream_iterator,operator*'></a></span><code class='itemdecl'>
 ostream_iterator&amp; operator*();
