--- a/ostream.iterator.ops.html
+++ b/ostream.iterator.ops.html
@@ -3,9 +3,9 @@ ostream_iterator&amp; operator=(const T&amp; value);
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 As if by:
 </p><pre class='codeblock'>
-*<i>out_stream</i> &lt;&lt; value;
-if (<i>delim</i> != 0)
-  *<i>out_stream</i> &lt;&lt; <i>delim</i>;
+*out_stream &lt;&lt; value;
+if (delim != 0)
+  *out_stream &lt;&lt; delim;
 return *this;
 </pre></div></div><p ><span class='indexparent'><a class='index' id='operator*,ostream_iterator'></a></span><span class='indexparent'><a class='index' id='ostream_iterator,operator*'></a></span><code class='itemdecl'>
 ostream_iterator&amp; operator*();
