--- a/stream.iterators.html
+++ b/stream.iterators.html
@@ -94,8 +94,8 @@ then this constructor is a constexpr constructor.</p></div></div><div class='par
 </p></div></div><p ><span class='indexparent'><a class='index' id='istream_iterator,constructor'></a></span><code class='itemdecl'>
 istream_iterator(istream_type&amp; s);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.iterator.cons-3'><div class='marginalizedparent'><a class='marginalized' href='#istream.iterator.cons-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Initializes <i>in_stream</i> with <span class='texttt'>addressof(s)</span>.
-<i>value</i> may be initialized during
+Initializes <span class='texttt'>in_stream</span> with <span class='texttt'>addressof(s)</span>.
+<span class='texttt'>value</span> may be initialized during
 construction or the first time it is referenced.</p></div></div><div class='para' id='istream.iterator.cons-4'><div class='marginalizedparent'><a class='marginalized' href='#istream.iterator.cons-4'>4</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>in_stream == addressof(s)</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='istream_iterator,constructor'></a></span><code class='itemdecl'>
 istream_iterator(const istream_iterator&amp; x) = default;
@@ -112,7 +112,7 @@ then this destructor is a trivial destructor.
 </p></div></div></div><div id='istream.iterator.ops'><h4 ><a class='secnum' href='#istream.iterator.ops' style='min-width:118pt'>24.6.1.2</a> <span class='texttt'>istream_iterator</span> operations <a class='abbr_ref' href='istream.iterator.ops'>[istream.iterator.ops]</a></h4><p ><span class='indexparent'><a class='index' id='operator*,istream_iterator'></a></span><span class='indexparent'><a class='index' id='istream_iterator,operator*'></a></span><code class='itemdecl'>
 const T&amp; operator*() const;
 </code></p><div class='itemdescr'></div><div class='para' id='istream.iterator.ops-1'><div class='marginalizedparent'><a class='marginalized' href='#istream.iterator.ops-1'>1</a></div><div class='itemdescr'><p ><i>Returns:</i>
-<i>value</i>.
+<span class='texttt'>value</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator->,istream_iterator'></a></span><span class='indexparent'><a class='index' id='istream_iterator,operator->'></a></span><code class='itemdecl'>
 const T* operator-&gt;() const;
 </code></p><div class='itemdescr'></div><div class='para' id='istream.iterator.ops-2'><div class='marginalizedparent'><a class='marginalized' href='#istream.iterator.ops-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
@@ -188,13 +188,13 @@ namespace std {
 </pre></div><div id='ostream.iterator.cons.des'><h4 ><a class='secnum' href='#ostream.iterator.cons.des' style='min-width:118pt'>24.6.2.1</a> <span class='texttt'>ostream_iterator</span> constructors and destructor <a class='abbr_ref' href='ostream.iterator.cons.des'>[ostream.iterator.cons.des]</a></h4><p ><span class='indexparent'><a class='index' id='ostream_iterator,constructor'></a></span><code class='itemdecl'>
 ostream_iterator(ostream_type&amp; s);
 </code></p><div class='itemdescr'></div><div class='para' id='ostream.iterator.cons.des-1'><div class='marginalizedparent'><a class='marginalized' href='#ostream.iterator.cons.des-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Initializes <i>out_stream</i> with <span class='texttt'>addressof(s)</span> and
-<i>delim</i> with null.
+Initializes <span class='texttt'>out_stream</span> with <span class='texttt'>addressof(s)</span> and
+<span class='texttt'>delim</span> with null.
 </p></div></div><p ><span class='indexparent'><a class='index' id='ostream_iterator,constructor'></a></span><code class='itemdecl'>
 ostream_iterator(ostream_type&amp; s, const charT* delimiter);
 </code></p><div class='itemdescr'></div><div class='para' id='ostream.iterator.cons.des-2'><div class='marginalizedparent'><a class='marginalized' href='#ostream.iterator.cons.des-2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Initializes <i>out_stream</i> with <span class='texttt'>addressof(s)</span> and
-<i>delim</i> with <span class='texttt'>delimiter</span>.
+Initializes <span class='texttt'>out_stream</span> with <span class='texttt'>addressof(s)</span> and
+<span class='texttt'>delim</span> with <span class='texttt'>delimiter</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='ostream_iterator,constructor'></a></span><code class='itemdecl'>
 ostream_iterator(const ostream_iterator&amp; x);
 </code></p><div class='itemdescr'></div><div class='para' id='ostream.iterator.cons.des-3'><div class='marginalizedparent'><a class='marginalized' href='#ostream.iterator.cons.des-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
@@ -208,9 +208,9 @@ ostream_iterator&amp; operator=(const T&amp; value);
 </code></p><div class='itemdescr'></div><div class='para' id='ostream.iterator.ops-1'><div class='marginalizedparent'><a class='marginalized' href='#ostream.iterator.ops-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 As if by:
 </p><pre class='codeblock'>
-*<i>out_stream</i> &lt;&lt; value;
-if (<i>delim</i> != 0)
-  *<i>out_stream</i> &lt;&lt; <i>delim</i>;
+*out_stream &lt;&lt; value;
+if (delim != 0)
+  *out_stream &lt;&lt; delim;
 return *this;
 </pre></div></div><p ><span class='indexparent'><a class='index' id='operator*,ostream_iterator'></a></span><span class='indexparent'><a class='index' id='ostream_iterator,operator*'></a></span><code class='itemdecl'>
 ostream_iterator&amp; operator*();
